<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txtComoVisualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/togOpcionMapa"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:text="@string/OpnVisualizacion" />

        <ToggleButton
            android:id="@+id/togOpcionMapa"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/txtComoVisualizar"
            android:background="@drawable/toggle_bg_map"
            android:checked="false"
            android:textOff=""
            android:textOn="" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableRadio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:stretchColumns="0" >

        <TableRow
            android:id="@+id/table2Row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <SeekBar
                android:id="@+id/seekRadio"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="top"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:progressDrawable="@anim/seekslid_progres"
                android:thumb="@anim/seekslid" />

            <TextView
                android:id="@+id/txtKm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btnBuscarCerca"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:background="@anim/anim_boton"
                android:drawableLeft="@drawable/ic_menu_search"
                android:text="@string/txtBuscar"
                android:textColor="@android:color/background_light"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtErrorCerca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/EventosFallido"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/proResulCerca"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp" />

    <com.desipal.Librerias.LoadMoreListView
        android:id="@+id/gridResultadosCerca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:gravity="center" />

    <RelativeLayout
        android:id="@+id/relativeMapa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <fragment
            android:id="@+id/mapaCercanos"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </RelativeLayout>

</LinearLayout>